--- a/.env
+++ b/.env
@@ -34,5 +34,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://developers@admission-ecole.com:59MCMHL8O2xc@admission-ecole.com:465?verify_peer=0
 ###< symfony/mailer ###
