--- a/.env
+++ b/.env
@@ -36,3 +36,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=smtp://developers@admission-ecole.com:59MCMHL8O2xc@admission-ecole.com:465?verify_peer=0
 ###< symfony/mailer ###
+
+APP_WEBSITE_URL='https://admission-ecole.com'
+APP_SENDER_EMAIL='developers@admission-ecole.com'
+APP_RECEIVER_EMAIL='contact@admission-ecole.com'
