--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.website_url: '%env(APP_WEBSITE_URL)%'
+    app.mailer_dns: '%env(MAILER_DSN)%'
+    app.sender_email: '%env(APP_SENDER_EMAIL)%'
+    app.receiver_email: '%env(APP_RECEIVER_EMAIL)%'
 
 services:
     # default configuration for services in *this* file
