--- a/.env
+++ b/.env
@@ -15,7 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=live
+APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=3781f62e4eb04b20d4b999710afe6e03
 ###< symfony/framework-bundle ###
 
