--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=3781f62e4eb04b20d4b999710afe6e03
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="mysql://admiqber_admi:+RtxH=X*buyY@127.0.0.1:3306/admiqber_admi?serverVersion=10.2.44-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://admiqber_admi:q+Wwxf_h-B}A@127.0.0.1:3306/admiqber_admi?serverVersion=10.2.44-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
